user and product role based security